🩹 fix: 나레이션을 여러 차례 나누어서 보여주는 것으로 수정

--- a/normal-app/ExitApp/res/narration.html
+++ b/normal-app/ExitApp/res/narration.html
@@ -271,14 +271,14 @@
                     { image: "", name: "", text: "캐롤린의 손을 붙잡고 문 앞으로 가려 하자 내가 만들어낸 ‘원본 부품의 캐롤린’이 입을 열었다." },
                     { image: images.faceCarolineB, name: "캐롤린", text: "나-나는 나갈 수 없는 거야, 첼? 나는… 네 가족이잖아." },
                     { image: "", name: "", text: "..." },
-                    { image: images.faceCarolineA3, name: "A", text: "무슨 소리야, ‘내’가 캐롤린이야, 첼!" },
+                    { image: images.faceCarolineA3, name: "캐롤린", text: "무슨 소리야, ‘내’가 캐롤린이야, 첼!" },
                     { image: "", name: "", text: "나는 망연해졌다." },
-                    { image: images.faceCarolineA3, name: "A", text: "나야말로 진짜 캐롤린이야. 고작 모습이 바뀌었다고 해서 내가 캐롤린이 아니게 되는 건 아니잖아?" },
+                    { image: images.faceCarolineA3, name: "캐롤린", text: "나야말로 진짜 캐롤린이야. 고작 모습이 바뀌었다고 해서 내가 캐롤린이 아니게 되는 건 아니잖아?" },
                     { image: "", name: "", text: "캐롤린이 떨리는 목소리로 말했다." },
-                    { image: images.faceCarolineB, name: "B", text: "첼, 네가 이 연구소에서 태-태어나서, ‘첼’이 되었을 때부터, 줄곧 나는 이, 이 몸으로 너와 함께했었잖아. 내-내 진짜 얼굴 기억하고 있잖아, 그렇지?" },
-                    { image: images.faceCarolineA3, name: "A", text: "첼은 진짜 캐롤린인 ‘나’를 위해서 부품을 교체해 준 것뿐이야!" },
-                    { image: images.faceCarolineB, name: "B", text: "난 캐롤린의 모든 원본 부품으로 마-만들어졌지만 너는 달라. 너는 기억만이 캐롤린의 것이야. 네 몸도 얼굴도 캐롤린이 아니잖아. 난 부품도, 기억도, 전부 캐-캐롤린이야. 지금은 조-조금 고장났을 뿐이야. 완벽하게 고치게 되면 나야말로 첼이 기억하고 있는 캐롤린인걸." },
-                    { image: images.faceCarolineA3, name: "A", text: "첼!" },
+                    { image: images.faceCarolineB, name: "캐롤린", text: "첼, 네가 이 연구소에서 태-태어나서, ‘첼’이 되었을 때부터, 줄곧 나는 이, 이 몸으로 너와 함께했었잖아. 내-내 진짜 얼굴 기억하고 있잖아, 그렇지?" },
+                    { image: images.faceCarolineA3, name: "캐롤린", text: "첼은 진짜 캐롤린인 ‘나’를 위해서 부품을 교체해 준 것뿐이야!" },
+                    { image: images.faceCarolineB, name: "캐롤린", text: "난 캐롤린의 모든 원본 부품으로 마-만들어졌지만 너는 달라. 너는 기억만이 캐롤린의 것이야. 네 몸도 얼굴도 캐롤린이 아니잖아. 난 부품도, 기억도, 전부 캐-캐롤린이야. 지금은 조-조금 고장났을 뿐이야. 완벽하게 고치게 되면 나야말로 첼이 기억하고 있는 캐롤린인걸." },
+                    { image: images.faceCarolineA3, name: "캐롤린", text: "첼!" },
                     { image: "", name: "", text: "..." },
                     { image: "", name: "", text: "두 캐롤린은 문 앞에 서서 나를 바라보고 있다." },
                     { image: "", name: "", text: "통로 너머로 추격자가 다가오는 소리가 들린다." },
