--- a/normal-app/ExitApp/res/result.html
+++ b/normal-app/ExitApp/res/result.html
@@ -35,7 +35,7 @@
 			display: flex;
 			flex-direction: column;
 			width: 300px;
-			height: fit-content;
+			height: 200px;
             border-radius: 7px;
 			background-color: #adadad;
 		}
@@ -50,6 +50,10 @@
             background-color: white;
             margin: 5px 0px;
 		}
+
+        .content {
+            height: 100%;
+        }
 
 		.footer {
             width: 40%;
@@ -89,7 +93,7 @@
             </div>
             <hr />
             <div class="footer">
-                <button id="button" onclick="closeWidget()">종료</button>
+                <button id="button" onclick="updateDialogue()">다음</button>
             </div>
 		</div>
 	</div>    
@@ -99,19 +103,32 @@
         const narrations = [
             {
                 title: "새 캐롤린과 나",
-                text: "낡은 캐롤린은 문을 잡지 않은 나머지 한 손으로 자신의 사지를 떼어내기 시작한다. 문이 닫히는 순간 마지막으로 본 것은 그가 목을 스스로 떼어내는 장면이었다."
+                dialogue: [
+                    { text: "낡은 캐롤린은 문을 잡지 않은 나머지 한 손으로 자신의 사지를 떼어내기 시작한다." },
+                    { text: "문이 닫히는 순간 마지막으로 본 것은 그가 목을 스스로 떼어내는 장면이었다." },
+                ]
             },
             {
                 title: "낡은 캐롤린과 나",
-                text: "새 캐롤린은 슬퍼한다. 그리고 닫혀가는 문 틈으로 나를 원망스럽게 쳐다보며 살인경비로봇들에게 파괴당한다."
+                dialogue: [
+                    { text: "새 캐롤린은 슬퍼한다." },
+                    { text: "그리고 닫혀가는 문 틈으로 나를 원망스럽게 쳐다보며 살인경비로봇들에게 파괴당한다." },
+                ]
             },
             {
                 title: "둘을 내보내고 내가 남는다",
-                text: "문을 열어주었지만 두 캐롤린은 나가지 않는다. 셋 다 곧이어 쫓아온 살인경비로봇들에 의해 파괴당한다."
+                dialogue: [
+                    { text: "문을 열어주었지만 두 캐롤린은 나가지 않는다." },
+                    { text: "셋 다 곧이어 쫓아온 살인경비로봇들에 의해 파괴당한다." },
+                ]
             },
             {
                 title: "둘을 남겨두고 혼자 나간다",
-                text: "두 캐롤린은 첼이 나가는 도중에 문을 잡고 있던 손을 놓는다. 나는 문틈에 끼어 으스러진다. 살인경비로봇들이 들이닥치는 것이 보인다. 의식이 멀어져간다."
+                dialogue: [
+                    { text: "두 캐롤린은 첼이 나가는 도중에 문을 잡고 있던 손을 놓는다." },
+                    { text: "나는 문틈에 끼어 으스러진다." },
+                    { text: "살인경비로봇들이 들이닥치는 것이 보인다. 의식이 멀어져간다." },
+                ]
             },
         ]
     </script>
@@ -121,13 +138,39 @@
         function closeWidget() {
 			window.parent.postMessage( { type: "close" }, "*" );
 		}
+
+        let currentNarrationIndex = 0;
+        let currentDialogueIndex = 0;
         const headerElement = document.getElementById('header');
         const contentElement = document.getElementById('content');
+        const buttonElement = document.getElementById('button');
+        
         window.addEventListener("message", function (e) {
-            const order = e.data.choice - 1;
-            headerElement.textContent = narrations[order].title;
-            contentElement.textContent = narrations[order].text;
+            currentNarrationIndex = e.data.choice - 1;
+            updateNarration();
 		});
+
+        function updateDialogue() {
+            currentDialogueIndex++;
+            if (currentDialogueIndex < narrations[currentNarrationIndex].dialogue.length) {
+                updateNarration();
+            } else {
+                closeWidget();
+            }
+        };
+
+        function updateNarration() {
+            const narration = narrations[currentNarrationIndex];
+            const dialogue = narration.dialogue;
+            
+            headerElement.textContent = narration.title;
+            contentElement.textContent = dialogue[currentDialogueIndex].text;
+            if (currentDialogueIndex < dialogue.length - 1) {
+                buttonElement.textContent = '다음';
+            } else {
+                buttonElement.textContent = '종료';
+            }
+        }
     </script>
 </body>
 
