🩹 fix: 지하 2층의 캐롤린과의 대화 일부 표현 방식 수정

--- a/normal-app/Under2ndApp/res/narration.html
+++ b/normal-app/Under2ndApp/res/narration.html
@@ -283,6 +283,29 @@
                     { image: "", name: "", text: "두 캐롤린은 문 앞에 서서 나를 바라보고 있다." },
                     { image: "", name: "", text: "통로 너머로 추격자가 다가오는 소리가 들린다." },
                 ]
+            },
+            {
+                title: "10. 지하 2층 분석실 - 상호작용(1): 캐롤린",
+                dialogue: [
+                    { image: "", name: "", text: "나는 창백한 얼굴로 누워 있는 캐롤린에게 달려가 그를 껴안았다." },
+                    { image: "", name: "첼", text: "캐롤린! 괜찮아? 망가진 거야? 걸을 수 있겠어?" },
+                    { image: images.faceCarolineA1, name: "캐롤린", text: "첼! 미안해. 다리가 부서졌어. 이 다리로 탈출은 무리야." },
+                    { image: "", name: "", text: "함께 나가자고 했잖아. 괜찮아. 대체할 수 있는 부품을 찾아올게. 조금만 기다려." },
+                ]
+            }, 
+            {
+                title: "11. 지하 2층 분석실 - 상호작용(2): 다리를 교체하는 캐롤린",
+                dialogue: [
+                    { image: "", name: "첼", text: "어때? 원래 다리와는 조금 다르지만..." },
+                    { image: images.faceCarolineA1, name: "캐롤린", text: "아주 좋아. 정말 고마워, 첼. 이젠 내가 너보다 키가 커졌네?" },
+                ]
+            }, 
+            {
+                title: "12. 지하 2층 분석실 - 상호작용(3): 캐롤린의 부서진 다리",
+                dialogue: [
+                    { image: "", name: "", text: "캐롤린의 부서진 다리를 들어올리자 캐롤린은 조금 놀란 듯 보인다." },
+                    { image: images.faceCarolineA1, name: "첼", text: "밖에 나가서 고칠 수 있을지도 모르잖아. 가져가자. 네 원래 다리인걸. 놔두고 가기 싫어." },
+                ]
             }
         ]
     </script>
