🚑 fix: 결말 텍스트 수정

--- a/normal-app/ExitApp/res/result.html
+++ b/normal-app/ExitApp/res/result.html
@@ -107,22 +107,26 @@
                 ]
             },
             {
+                title: "둘을 남겨두고 혼자 나간다",
+                dialogue: [
+                    { text: "나는 두 캐롤린을 남겨두고 혼자 탈출하기로 결정했다." },
+                    { text: "두 캐롤린에게 내 결정을 전했다."},
+                    { text: "두 캐롤린은 나를 위해 문을 열어주었지만,"},
+                    { text: "내가 나가는 도중에 문을 잡고 있던 손을 놓았다." },
+                    { text: "비명을 채 지르기도 전에 나는 문틈에 끼어 으스러진다." },
+                    { text: "경비로봇들이 들이닥치는 것이 보인다." },
+                    { text: "…" },
+                    { text: "의식이 멀어져간다." },
+                ]
+            },
+            {
                 title: "둘을 내보내고 내가 남는다",
                 dialogue: [
                     { text: "나는 두 캐롤린을 내보내고 내가 남기로 결정했다." },
                     { text: "문을 열어주었지만 두 캐롤린은 나가지 않았다." },
-                    { text: "곧이어 쫓아온 살인경비로봇들에 의해 우리는 모두 파괴당했다." },
-                ]
-            },
-            {
-                title: "둘을 남겨두고 혼자 나간다",
-                dialogue: [
-                    { text: "나는 두 캐롤린을 남겨두고 혼자 탈출하기로 결정했다." },
-                    { text: "둘은 내가 나가는 도중에 문을 잡고 있던 손을 놓았다." },
-                    { text: "나는 문틈에 끼어 으스러진다. " },
-                    { text: "살인경비로봇들이 들이닥치는 것이 보인다. " },
+                    { text: "두 캐롤린은 다가와 내 손을 잡았다." },
                     { text: "…" },
-                    { text: "의식이 멀어져간다. " },
+                    { text: "그리고,\n이내 쫓아온 경비로봇들에 의해 우리는 모두 파괴당했다." },
                 ]
             },
             {
