fix: 개선사항 반영

--- a/normal-app/under1st/res/narration.html
+++ b/normal-app/under1st/res/narration.html
@@ -210,7 +210,7 @@
                     { image: images.faceMary, name: "메리", text: "마지막으로 너희를 보게 되어서 기뻐. 정말로." },
                     { image: "", name: "첼", text: "(캐롤린은 벅찬 감정에 입을 막으려 했던 것 같지만 그의 오른팔이 더 이상의 부하를 견디지 못하고 둔탁한 소리를 내며 바닥에 떨어지고 말았다.)" },
                     { image: images.faceAnn, name: "앤", text: "지금까지 정말 많이 힘들었겠구나. …캐롤린, 우리 팔을 가져가. 다리는 부러졌지만 팔은 멀쩡하니까 아직 쓸 수 있어." },
-                    { image: images.faceMary, name: "메리", text: "그만 울고, 응? 우린 어차피 조금 있으면 폐기될 거야. 옆 방 기계에 들어가서 다시는 나오지 못하는 거지. 그러니까 마지막으로 너희들에게 도움이 되고 싶어. 정말로. 부탁이야. 첼, 팔을 떼어줘." },
+                    { image: images.faceMary, name: "메리", text: "그만 울고, 응? 우린 어차피 조금 있으면 폐기될 거야. 폐기처리실에 들어가서 다시는 나오지 못하는 거지. 그러니까 마지막으로 너희들에게 도움이 되고 싶어. 정말로. 부탁이야. 첼, 팔을 떼어줘." },
                     { image: "", name: "첼", text: "(울음을 삼키는 캐롤린을 뒤로 하고 그들의 팔을 떼어 챙겼다.) 고마워. 미안해." },
                     { image: "", name: "앤과 메리", text: "우리야말로 고마워. 부디 너희는 무사히 나갈 수 있길 바라. 이제 그만 가! 당직 연구원이 올 수도 있어." },
                     { image: images.faceCarolineA1, name: "캐롤린", text: "……." },
@@ -222,9 +222,9 @@
                 dialogue: [
                     { image: "", name: "", text: "폐기물보관실을 뒤로 하고 문을 여는 순간, 불길한 붉은 불빛이 빛난다." },
                     { image: "", name: "", text: "뭐라 말하기도 전에 캐롤린이 나를 밀쳤다." },
-                    { image: "", name: "", text: "둔탁한 소리가 들리고, 무슨 일이 벌어진 것인지 채 이해하기도 전에 캐롤린이 내 손을 붙들고 옆 방으로 들어가 문을 닫았다." },
+                    { image: "", name: "", text: "둔탁한 소리가 들리고, 무슨 일이 벌어진 것인지 채 이해하기도 전에 캐롤린이 내 손을 붙들고 어딘가로 달려들어가 문을 닫았다." },
                     { image: "", name: "", text: "캐롤린의 신음소리와 내가 숨을 헐떡이는 소리만이 들린다." },
-                    { image: "", name: "", text: "벽을 더듬어 불을 켜자 이내 이곳이 폐기물보관실 옆 폐기처리실임을 깨닫는다." },
+                    { image: "", name: "", text: "벽을 더듬어 불을 켜자 이내 이곳이 폐기처리실임을 깨닫는다." },
                     { image: "", name: "", text: "옆을 돌아보자 배를 감싸쥔 캐롤린이 머리에서 피를 흘리며 창백한 얼굴로 스르르 주저앉았다.." },
                     { image: "", name: "첼", text: "캐롤린! 캐롤린!" },
                     { image: images.faceCarolineA2, name: "캐롤린", text: "아, 아파, 첼… 너는 괜찮지? 안 다쳤지? 미안해, 내가 또 네 발목을 잡네…" },
