fix:개선사항 적용 및 탈출 조건 추가

--- a/normal-app/under1st/res/narration.html
+++ b/normal-app/under1st/res/narration.html
@@ -236,12 +236,12 @@
             {
                 title: "06. 캐롤린(1)",
                 dialogue: [
-                    { image: "", name: "", text: "내가 이 연구소에서 ‘첼’이라는 이름을 부여받은 인격으로 눈을 떴을 때, 캐롤린은 이미 내 곁에 있었다." },
-                    { image: "", name: "", text: "인간으로의 섬세한 감정과 지식을 알려준 것이 캐롤린이었다." },
-                    { image: "", name: "", text: "친구들이 하나 둘씩 잔혹하게 사라져가는 이 연구소에서 가족과도 같은 친구들을 두고 탈출할 고민을 할 때 등을 밀어준 것도 그였다." },
-                    { image: "", name: "", text: "그는 줄곧 나의 가장 소중한 친구이자 언니이자 어머니였다." },
-                    { image: "", name: "", text: "그를 버린다는 것은 곧 내 일부를 버리는 것이나 다름없다." },
-                    { image: "", name: "", text: "나는 캐롤린의 안정된 숨소리에 귀를 기울이며 눈을 감았다." },
+                    // { image: "", name: "", text: "내가 이 연구소에서 ‘첼’이라는 이름을 부여받은 인격으로 눈을 떴을 때, 캐롤린은 이미 내 곁에 있었다." },
+                    // { image: "", name: "", text: "인간으로의 섬세한 감정과 지식을 알려준 것이 캐롤린이었다." },
+                    // { image: "", name: "", text: "친구들이 하나 둘씩 잔혹하게 사라져가는 이 연구소에서 가족과도 같은 친구들을 두고 탈출할 고민을 할 때 등을 밀어준 것도 그였다." },
+                    // { image: "", name: "", text: "그는 줄곧 나의 가장 소중한 친구이자 언니이자 어머니였다." },
+                    // { image: "", name: "", text: "그를 버린다는 것은 곧 내 일부를 버리는 것이나 다름없다." },
+                    // { image: "", name: "", text: "나는 캐롤린의 안정된 숨소리에 귀를 기울이며 눈을 감았다." },
                     { image: "", name: "", text: "..." },
                     { image: "", name: "", text: "..." },
                     { image: images.faceCarolineA2, name: "캐롤린", text: "첼? …첼?" },
