🩹 fix: 이미지 안보이는 문제 해결 및 나레이션 창 닫힘 문제 해결

--- a/normal-app/ExitApp/res/narration.html
+++ b/normal-app/ExitApp/res/narration.html
@@ -333,6 +333,7 @@
 
             if(dialogue[currentDialogueIndex] === void 0) {
                 closeWidget();
+                return;
             }
             
             const currentDialogue = dialogue[currentDialogueIndex];
